--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -268,7 +268,7 @@
                   Approved P.O.
                 </div>
                 <div class="col-xs-6 text-right">
-                  *GRN = Good Receive Date
+                  *GRN = Good Receive Note
                 </div>
               </mat-panel-title>
             </mat-expansion-panel-header>
@@ -314,9 +314,7 @@
                       ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
                     >
                     <!-- <span>&nbsp;</span> -->
-                    <span class="p-r-10"
-                      ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/view-grn/', element.purchaseOrderId]">Add/View GRN</a></span
-                    >
+                    <span class="p-r-10"><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/view-grn/', element.purchaseOrderId]">Add/View GRN</a></span>
 
                     <!-- <span class="p-r-10"
                       ><a style="color: #f47721" href="javascript:void(0)" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
