--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -18,7 +18,7 @@
       <ng-template #editDateBlock>
         <span class="text-semi-bold">
           P.O. Valid Till:
-          <mat-form-field class="border-input date-label validTill">
+          <mat-form-field class="border-input date-label validTill mat-form-field-padding">
             <mat-label>Valid Till</mat-label>
             <span class="form-placeholder">{{ projectDetails["controls"]["endDate"].value | date: "dd-MMM-yyy" }}</span>
             <input hidden #dateinput matInput formControlName="endDate" [matDatepicker]="endDate" (focus)="endDate.open()" readonly [min]="minDate" />
