--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -12,6 +12,7 @@
           <span class="mat-header-cell widthReduce" mat-sort-header="vesselName">S.No</span>
           <span class="mat-header-cell">Material Name</span>
           <span class="mat-header-cell">Makes</span>
+          <span class="mat-header-cell">Fullfillment Date</span>
           <span class="mat-header-cell">Supplier Rate</span>
           <span class="mat-header-cell">Awarded quantity</span>
           <span class="mat-header-cell">Amount ₹</span>
@@ -24,6 +25,15 @@
             <span class="mat-cell widthReduce">{{ m + 1 }}</span>
             <span class="mat-cell">{{ material.materialName }}</span>
             <span class="mat-cell"></span>
+            <span class="mat-cell">
+              <mat-form-field class="border-input  date-label date-button mat-form-field-padding">
+                <mat-label>Fullfilment Date </mat-label>
+                <span class="form-placeholder">{{ poForms["controls"]["forms"]["controls"][m]["controls"]["fullfilmentDate"].value | date: "dd-MMM-yyy" }}</span>
+                <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
+                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
+                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
+              </mat-form-field>
+            </span>
             <span class="mat-cell"></span>
             <span class="mat-cell">{{ getMaterialQuantity(m) | number: "1.2-2" }}</span>
             <span class="mat-cell">{{ getMaterialAmount(m) | number: "1.2-2" }}</span>
