--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -12,7 +12,7 @@
             <mat-form-field class="border-input date-label-indent">
                  <span class="form-placeholder">{{ dateDue| date: "dd-MMM-yyy"}}</span>
               <input matInput hidden (dateChange)="duedatefunc($event)" [matDatepicker]="dueDate"
-                placeholder="Quote Valid till" [(ngModel)]="rfqSupplierDetailList.dueDate" 
+                placeholder="Quote Valid till" [(ngModel)]="rfqSupplierDetailList.quoteValidTill" 
                 (focus)="dueDate.open()" readonly [min]="minDate" required />
               
               <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
@@ -108,8 +108,8 @@
                 <td class="text-align-right">
                   <mat-form-field class="border-input">
                     <input matInput type="number" placeholder="GST %" [(ngModel)]="material.materialIgst"  min="0"
-                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-                      (change)="valueChange(rfqSupplierDetailList)" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
+                      onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                      (change)="valueChange(rfqSupplierDetailList)"/>
                     <mat-error>GST is Required</mat-error>
                   </mat-form-field>
                 </td>
