--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -26,13 +26,16 @@
             <span class="mat-cell">{{ material.materialName }}</span>
             <span class="mat-cell"></span>
             <span class="mat-cell">
-              <mat-form-field class="border-input  date-label date-button mat-form-field-padding">
-                <mat-label>Fullfilment Date </mat-label>
-                <span class="form-placeholder">{{ poForms["controls"]["forms"]["controls"][m]["controls"]["fullfilmentDate"].value | date: "dd-MMM-yyy" }}</span>
-                <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
-                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
-                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
-              </mat-form-field>
+              <ng-container *ngIf="mode != 'edit'; else editQuantity"> {{ material.fullfilmentDate }}</ng-container>
+              <ng-template #editQuantity>
+                <mat-form-field class="border-input  date-label date-button mat-form-field-padding" style="width: 77%;">
+                  <mat-label>Select Date</mat-label>
+                  <span class="form-placeholder">{{ poForms["controls"]["forms"]["controls"][m]["controls"]["fullfilmentDate"].value | date: "dd-MMM-yyy" }}</span>
+                  <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" placeholde="Enter Date" (focus)="dueDate.open()" readonly />
+                  <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
+                  <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
+                </mat-form-field>
+              </ng-template>
             </span>
             <span class="mat-cell"></span>
             <span class="mat-cell">{{ getMaterialQuantity(m) | number: "1.2-2" }}</span>
@@ -46,6 +49,7 @@
               <span class="mat-cell widthReduce"></span>
               <span class=" mat-cell"></span>
               <span class="mat-cell">{{ purchaseOrder.materialBrand }}</span>
+              <span class="mat-cell"></span>
               <span class="mat-cell">
                 <ng-container *ngIf="mode != 'edit'; else editRate"> {{ purchaseOrder.materialUnitPrice }}</ng-container>
                 <ng-template #editRate>
