--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -4,7 +4,6 @@
     <div class="row width-100">
       <div class="col-md-12">
         <div class="row p-b-10">
-
           <div class="col-md-5 col-xs-12 p-t-10">
             
             <label for="validity" class="pull-left p-t-20 p-r-10">Quote Valid till</label>
@@ -17,7 +16,7 @@
               
               <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
 
-              <mat-datepicker #dueDate (change)="valueChange(rfqSupplierDetailList)"></mat-datepicker>
+              <mat-datepicker #dueDate (keyup)="valueChange(rfqSupplierDetailList)"></mat-datepicker>
               <!-- startView="month" [startAt]="dueDate" -->
             </mat-form-field>
             
@@ -107,9 +106,9 @@
                 </td>
                 <td class="text-align-right">
                   <mat-form-field class="border-input">
-                    <input matInput type="number" placeholder="GST %" [(ngModel)]="material.materialIgst"  min="0"
+                    <input matInput type="number" placeholder="GST %" [(ngModel)]="material.Igst"  min="0"
                       onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-                      (change)="valueChange(rfqSupplierDetailList)"/>
+                      (keyup)="valueChange(rfqSupplierDetailList)"/>
                     <mat-error>GST is Required</mat-error>
                   </mat-form-field>
                 </td>
@@ -132,9 +131,9 @@
                   <td>
                     <mat-form-field class="border-input">
                       <input matInput type="number" placeholder="Rate"  min="0"
-                  onkeypress="return event.charCode >= 48 && event.charCode <= 57" [(ngModel)]="brand.brandRate"
-                        (change)="valueChange(rfqSupplierDetailList)" />
-                      <mat-error>Project Name is Required</mat-error>
+                  onkeypress="return event.charCode >= 48 && event.charCode <= 57" [(ngModel)]="brand.tempRate"
+                        (keyup)="valueChange(rfqSupplierDetailList)" />
+                      <mat-error>Rate is Required</mat-error>
                     </mat-form-field>
                   </td>
                   
