--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -6,7 +6,7 @@
           <form class="update-info__form" *ngIf="userInfoForm" [formGroup]="userInfoForm" (ngSubmit)="submit()">
             <div class="row">
               <div class="col-sm-12 col-md-12">
-                <h3 class="user-profile text-center text-uppercase pt-2 pb-4" *ngIf="users">{{ users.organizationName }}</h3>
+                <h3 class="user-profile text-center text-uppercase pt-2 pb-4" *ngIf="users">Personal Information</h3>
               </div>
 
               <div class="col-sm-12 col-md-6">
@@ -65,7 +65,7 @@
                   </mat-error>
                 </mat-error>
 
-                <mat-form-field class="border-select w-100" >
+                <mat-form-field class="border-select w-100"  *ngIf="users.roleName != 'l3'">
                   <mat-label>Role</mat-label>
                   <mat-select formControlName="roleId">
                     <mat-option *ngFor="let role of roles" [value]="role.roleId">
@@ -76,6 +76,9 @@
                 <mat-error *ngIf="userInfoForm.controls['roleId'].errors && (userInfoForm.controls['roleId'].dirty || userInfoForm.controls['roleId'].touched)">
                   <mat-error *ngIf="userInfoForm.controls['roleId'].hasError('required')"> Role is required</mat-error>
                 </mat-error>
+                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l3'">
+                  <input matInput type="text" placeholder="Role" formControlName="roleDescription" />
+                </mat-form-field>
 
 
                   <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
