--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -168,11 +168,11 @@
 }
 
 .update-info-profile {
-  // background-image: url("/assets/images/background-image-overlay.jpg");
-  // background-size: cover;
-  // background-repeat: no-repeat;
-  // background-position: center;
-  background: #0E3C55;
+  background-image: url("/assets/images/background-image-overlay.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+ // background: #0E3C55;
   padding: 130px 0;
   &__popup {
     background-color: #fff;
