--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -5,10 +5,14 @@
         <div class="update-info__popup p-4">
           <form class="update-info__form" *ngIf="userInfoForm" [formGroup]="userInfoForm" (ngSubmit)="submit()">
             <div class="row">
-              <div class="col-sm-12 col-md-12">
+              <div class="col-sm-11 col-md-11">
                 <h3 class="user-profile text-center text-uppercase pt-2 pb-4" *ngIf="users">Personal Information</h3>
               </div>
-
+              <div class="col-sm-1 col-md-1">
+                <button type="button" class="close pull-right p-t-5" (click)="redirectToDashboard()" aria-label="Close">
+                  <span aria-hidden="true">×</span>
+                </button>
+              </div>
               <div class="col-sm-12 col-md-6">
                 <div class="phot-title"></div>
                 <div class="user-photo">
