Forgot-Pass to Login, Terms and Other Tag Done perfect In Update Info Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -86,6 +86,11 @@
                       </div>
                   </ng-container>
                    
+                        <div class="text-align-center" *ngIf="phonescreenShow">
+                            <div class="heading-des-forget">
+                              Click here for <span class="main-color cursor-pointer" (click)="reDirectToSignIn()"> Sign In </span>
+                            </div>
+                        </div>
 
                   </form>
             </div>
