--- a/src/app/features/first-login/terms-conditions/terms-conditions.component.html
+++ b/src/app/features/first-login/terms-conditions/terms-conditions.component.html
@@ -160,10 +160,12 @@
                          The Platform is a standard off-the-shelf application.
                      </p>
                       <p class="terms-conditions__content">
-                          You agree to use the Services solely for the purpose for which the Services are provided, namely for managing building material inventory as well as procurement through the platform solely aiding to construction activities.. You shall not sublicense or resell the Platform or the Services for the use or benefit of any other organization, entity, business or enterprise.
+                         You agree to use the Services solely for the purpose for which the Services are provided, namely for managing building material inventory as well as procurement through the platform solely aiding to construction activities.. You shall not sublicense or resell the Platform or the Services for the use or benefit of any other organization, entity, business or enterprise.
                       </p>
                     <p class="terms-conditions__content">
-                        Archer Technologies Pvt. Ltd. reserves the right to access all the requests for quotes being raised on the platform and can participate as a supplier.
+                       Archer Technologies Pvt. Ltd. reserves the right to access all the requests for quotes being raised on the platform and may provide you with pricing for those RFQ’s as appropriate. <b>
+                        Archer Technologies Pvt Ltd. may retain copies of RFQ’s as necessary to comply with its legal and regulatory obligations and its internal compliance rules.
+                       </b>
                     </p>
                       <p class="terms-conditions__content">
                             <span class="terms-conditions__content-heading">
@@ -221,7 +223,7 @@
                             </span>
                      </p>
                        <p class="terms-conditions__content">
-                        The subscription cost for the trial period stands to be zero. The trial period ends after 90 days of signup, post which  a monthly subscription fee of INR 9999 will be applicable. Subscription fee needs to be paid at the starting of every month.
+                        The subscription cost for the trial period stands to be zero. The trial period ends after 90 days of signup, post which  a monthly subscription fee of INR 9999 will be applicable for the first full year of subscription and may change thereafter. Subscription fee needs to be paid at the starting of every month.
                         <br>
                         There will be no refunds or credits for partial months of service, upgrade/downgrade refunds, or refunds for months unused with an open account. In order to treat everyone equally, no exceptions will be made.
                      </p>
@@ -317,6 +319,7 @@
                     </p>
                     <p class="terms-conditions__content">
                         If you no longer wish to use the Platform, you may terminate Your registration by sending an email to support@buildsupply.com . You will then cease to have access to the Platform or any of the services.
+
                     </p>
                     <p class="terms-conditions__content">
                         Archer Technologies reserves the right to suspend or terminate Your Account or restrict or prohibit You access to the Platform immediately (a) if Archer Technologies is unable to verify or authenticate Your registration data, email address or other information provided by You, (b) if Archer Technologies believes that Your actions may cause legal liability for You or for Archer Technologies, or all or some of Archer Technologies’ other users, or (c) if Archer Technologies believes You have provided false or misleading registration data or other information, have not updated Your Account Information, have interfered with other users or the administration of the Services, or have violated this TOS or the Privacy Policy. You shall not be entitled to access the Platform or avail the Services if Your Account has been temporarily or indefinitely suspended or terminated by Archer Technologies for any reason whatsoever. Archer Technologies may, at any time, reinstate any suspended Account, without giving any reason for that. If You have been indefinitely suspended You shall not register or attempt to register with Archer Technologies or its affiliates / partners or use the Services in any manner whatsoever until such time that You are reinstated by Archer Technologies.
