--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -1,52 +1,65 @@
-<form *ngIf="signupForm" [formGroup]="signupForm" class="sign-up-form">
- 
-                <!-- <mat-form-field class="col-xs-12 border-input">
+<form *ngIf="signupForm" [formGroup]="signupForm" (ngSubmit)="signup()" class="sign-up-form">
+  <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="firstName" type="text" placeholder="First Name" />
                 </mat-form-field>
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="lastName" type="text" placeholder="Last Name" />
                 </mat-form-field> -->
-               <div class="phone-number">
-                    <mat-form-field class="col-xs-12 border-input display-flex">
-                    <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone" #phone placeholder="Phone No." (input)="enterPhone($event)" />
-                    <button *ngIf="!lessOTPDigits"  mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="phone.value.length != 10" (click)="sendOtpBtn()">
-                        Send OTP 
-                    </button>
-                </mat-form-field>
-                  <small
-                    *ngIf="signupForm.controls['phone'].hasError('required') && signupForm.controls['phone'].touched"
-                    class="signupForm-error-msg p-l-12"> Phone No is required </small>
-                    <small
-                    *ngIf="signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched"
-                    class="signupForm-error-msg p-l-12"> Enter Valid Phone No</small>
-                    <small *ngIf="lessOTPDigits" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
-               </div>
+  <div class="phone-number">
+    <mat-form-field class="col-xs-12 border-input display-flex">
+      <input
+        matInput
+        type="number"
+        min="0"
+        onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+        formControlName="phone"
+        #phone
+        placeholder="Phone No."
+        (input)="enterPhone($event)"
+      />
+      <button
+        type="button"
+        *ngIf="!lessOTPDigits"
+        mat-raised-button
+        class="main-background-color main-button color-white pull-right"
+        [disabled]="phone.value.length != 10"
+        (click)="sendOtpBtn()"
+      >
+        Send OTP
+      </button>
+    </mat-form-field>
+    <small *ngIf="signupForm.controls['phone'].hasError('required') && signupForm.controls['phone'].touched" class="signupForm-error-msg p-l-12"> Phone No is required </small>
+    <small *ngIf="signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched" class="signupForm-error-msg p-l-12"> Enter Valid Phone No</small>
+    <small *ngIf="lessOTPDigits" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
+  </div>
 
-                <mat-form-field class="col-xs-12 border-input" *ngIf="showOtp && !lessOTPDigits">
-                    <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="otp" (input)="enterOTP($event)" placeholder="Enter the OTP" />
-                     <small
-                    *ngIf="signupForm.controls['otp'].hasError('required') && signupForm.controls['otp'].touched"
-                    class="signupForm-error-msg"> OTP No is required </small>
-                    <small *ngIf="!lessOTPDigits && (otpLength==4)" class="signupForm-error-msg"> Enter Valid OTP</small>
-                    <!-- <small class="signupForm-error-msg green-colour"> Resend OTP </small> -->
-                </mat-form-field>
-                
-                <mat-form-field class="col-xs-12 border-input">
-                    <input matInput type="text" formControlName="organisationName" placeholder="Company Name" />
-                </mat-form-field>
-                <mat-form-field class="col-xs-12 border-input">
-                    <input matInput type="email" formControlName="email" (input)="verifyEmail($event)" placeholder="Email" />
-                    <small
-                    *ngIf="signupForm.controls['email'].hasError('required') && signupForm.controls['email'].touched"
-                    class="signupForm-error-msg"> Email is required </small>
-                    <small
-                    *ngIf="signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched"
-                    class="signupForm-error-msg"> Enter Valid Email</small>
+  <mat-form-field class="col-xs-12 border-input" *ngIf="showOtp && !lessOTPDigits">
+    <input
+      matInput
+      type="number"
+      min="0"
+      onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+      formControlName="otp"
+      (input)="enterOTP($event)"
+      placeholder="Enter the OTP"
+    />
+    <small *ngIf="signupForm.controls['otp'].hasError('required') && signupForm.controls['otp'].touched" class="signupForm-error-msg"> OTP No is required </small>
+    <small *ngIf="!lessOTPDigits && otpLength == 4" class="signupForm-error-msg"> Enter Valid OTP</small>
+    <!-- <small class="signupForm-error-msg green-colour"> Resend OTP </small> -->
+  </mat-form-field>
 
-                    <small *ngIf="(!emailVerified)">Email already in use.</small>
-                </mat-form-field>
-                
-                <!-- <mat-form-field class="col-xs-12 border-select">
+  <mat-form-field class="col-xs-12 border-input">
+    <input matInput type="text" formControlName="organisationName" placeholder="Company Name" />
+  </mat-form-field>
+  <mat-form-field class="col-xs-12 border-input">
+    <input matInput type="email" formControlName="email" (input)="verifyEmail($event)" placeholder="Email" />
+    <small *ngIf="signupForm.controls['email'].hasError('required') && signupForm.controls['email'].touched" class="signupForm-error-msg"> Email is required </small>
+    <small *ngIf="signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched" class="signupForm-error-msg"> Enter Valid Email</small>
+
+    <small *ngIf="!emailVerified">Email already in use.</small>
+  </mat-form-field>
+
+  <!-- <mat-form-field class="col-xs-12 border-select">
                     <mat-select formControlName="organisationType" placeholder="Contractor">
                         <mat-option *ngFor="let type of organisationTypes" [value]="type.value">
                             {{type.viewValue}}
@@ -54,27 +67,31 @@
                     </mat-select>
                 </mat-form-field> -->
 
-                <mat-form-field class="col-xs-12 border-input">
-                     <input matInput [type]="showPassWordString? 'text': 'password'" formControlName="password" placeholder="Password" />
-                    <a>
-                        <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
-                    </a>
-                </mat-form-field>
-                <!-- <mat-form-field class="col-xs-12 border-input">
+  <mat-form-field class="col-xs-12 border-input">
+    <input matInput [type]="showPassWordString ? 'text' : 'password'" formControlName="password" placeholder="Password" />
+    <a>
+      <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
+    </a>
+  </mat-form-field>
+  <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput type="password" formControlName="confirmPassword" placeholder="Retype Password" />
                 </mat-form-field> -->
-                   
-                <div mat-dialog-actions class="col-xs-12 p-t-40">
-                    <button mat-raised-button class="main-background-color main-button color-white m-b-5" 
-                        cdkFocusInitial style="width: 100%;" [disabled]="!signupForm.valid || !lessOTPDigits || !emailVerified" (click)="signup()">
-                        Sign Up
-                    </button>
-                </div>
-                <!-- <div mat-dialog-actions class="col-xs-12 p-t-20">
+
+  <div mat-dialog-actions class="col-xs-12 p-t-40">
+    <button
+      mat-raised-button
+      class="main-background-color main-button color-white m-b-5"
+      cdkFocusInitial
+      style="width: 100%;"
+      [disabled]="!signupForm.valid || !lessOTPDigits || !emailVerified"
+    >
+      Sign Up
+    </button>
+  </div>
+  <!-- <div mat-dialog-actions class="col-xs-12 p-t-20">
                             <button mat-raised-button class="background-white-color main-button main-color m-b-5"
                                 [mat-dialog-close]="" cdkFocusInitial style="width: 100%;">
                                 Sign In
                             </button>
                         </div> -->
-           
 </form>
