--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -106,13 +106,13 @@
                       <mat-chip
                     *ngFor="let trade of tradeList"
                     [selected]="trade.tradeId"
-                    [ngClass]="[trade.selected && trade.tradeId !== 22 ? 'active' : '', trade.tradeId === 22 ? 'user-Other-Trade' : '']"
+                    [ngClass]="[trade.selected && trade.tradeId !== OthersId ? 'active' : '', trade.tradeId === OthersId ? 'user-Other-Trade' : '']"
                     style="cursor: default;"
                   >
                     {{ trade.tradeName }}
                   </mat-chip>
                   <!-- <form [formGroup]="customTrade">
-                    <mat-form-field *ngIf="selectedTradesId.indexOf(22) > -1" class="border-input p-l-10">
+                    <mat-form-field *ngIf="selectedTradesId.indexOf(OthersId) > -1" class="border-input p-l-10">
                       <input matInput formControlName="trade" type="text" placeholder="Enter Trade" />
                     </mat-form-field>
                   </form> -->
