--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -1,6 +1,6 @@
 <div class="header-add-edit-dialog">
   <h1 mat-dialog-title>Confirmation</h1>
-  <button type="button" class="close" (click)="close()" aria-label="Close">
+  <button type="button" class="close" (click)="close(null)" aria-label="Close">
     <span aria-hidden="true">×</span>
   </button>
 </div>
@@ -12,7 +12,7 @@
 
 <div mat-dialog-actions>
   <div class="col-sm-6">
-    <button mat-raised-button class="main-color main-button pull-left" (click)="close()">
+    <button mat-raised-button class="main-color main-button pull-left" (click)="close(null)">
       Cancel
     </button>
   </div>
