--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -40,11 +40,11 @@
           <div class="col-xs-2">Issued Quantity</div>
           <div class="col-xs-3">To be Issued</div>
         </div>
-        <form [formGroup]="materialForms " (ngSubmit)="onSubmit()">
+        <form [formGroup]="materialForms ">
           <div formArrayName="forms" class="row p-t-10 p-b-10 gray-border" *ngFor="let indent of issueToIndentDetails.indentDetailList; let i = index; ">
             <div class="col-xs-3 formGroup p-t-12">
               <div>
-                 {{indent.indentId}}
+                {{indent.indentId}}
               </div>
             </div>
             <div class="col-xs-2 formGroup p-t-12 text-align-center p-r-40">
@@ -98,7 +98,6 @@
                   (input)="showQuantityInput()"
                   matInput
                   type="number"
-                  [max]="num"
                   min="0"
                   onkeypress="return event.charCode >= 48 && event.charCode <= 57"
                   placeholder="Issue Quantity"
